--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,4 @@
+/* Adding some Roboto fonts from Google. */
 @font-face {
 	font-family: roboto-thin;
 	src: url('Roboto-Thin.ttf')
@@ -12,3 +13,10 @@
 	font-family: roboto-light;
 	src: url('Roboto-Light.ttf')
 }
+
+/* Configuration of body elements. */
+body {background-color: #6F6279}
+
+.headbar{font-family: roboto; font-weight: 800}
+.title{font-family: roboto-light; font-weight: 600}
+.text{font-family: roboto-thin; font-weight: 700}
