--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,7 +15,7 @@
 }
 
 /* Configuration of body elements. */
-body {background-color: #6F6279}
+body {background-color: #5c5470}
 
 .headbar{font-family: roboto; font-weight: 800}
 .title{font-family: roboto-light; font-weight: 600}
