--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,9 +4,26 @@
 @font-face {font-family: roboto-thin; src: url('Roboto-Thin.ttf')}
 
 /* Configuration of body elements. */
-body {background-color: #5c5470}
+body {
+	background-color: #5c5470
+}
+div {
+	text-align: center;
+}
 
 /* Class definitions. */
-.headbar{font-family: roboto; font-weight: 800; color: #F7F0FF}
-.title{font-family: roboto-light; font-weight: 600; color: #F7F0FF}
-.text{font-family: roboto-thin; font-weight: 700; color: #F7F0FF}
+.normalfont{
+	font-family: roboto; 
+	font-weight: 800; 
+	color: #F7F0FF
+}
+.lightfont{
+	font-family: roboto-light; 
+	font-weight: 600; 
+	color: #F7F0FF
+}
+.thinfont{
+	font-family: roboto-thin; 
+	font-weight: 700; 
+	color: #F7F0FF
+}
