--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 /* Adding some Roboto fonts from Google. */
-@font-face {font-family: roboto; src: url('Roboto-Regular.ttf')}
-@font-face {font-family: roboto-light; src: url('Roboto-Light.ttf')}
-@font-face {font-family: roboto-thin; src: url('Roboto-Thin.ttf')}
+@font-face {font-family: roboto; src: url("Roboto-Regular.ttf")}
+@font-face {font-family: roboto-light; src: url("Roboto-Light.ttf")}
+@font-face {font-family: roboto-thin; src: url("Roboto-Thin.ttf")}
 
 /* Configuration of body elements. */
 body {
