--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,25 +5,46 @@
 
 /* Configuration of body elements. */
 body {
-	background-color: #5c5470
+	background-color: #5c5470;
 }
-div {
-	text-align: center;
+
+ul {
+	display: inline-block;
+	list-style-type: none;
+	padding: 0;
+	margin: 0;
+	width: 100%;
+	overflow: hidden;
+	background-color: #7B6780;
+}
+
+li {
+	float: left;
+}
+
+li a {
+	display: block;
+	padding: 15px;
+	text-decoration: none;
 }
 
 /* Class definitions. */
-.normalfont{
+.currentpage {
+	background-color: #625266
+}
+
+.normalfont {
 	font-family: roboto, Verdana, sans-serif; 
 	font-weight: 800; 
-	color: #F7F0FF
+	color: #F7F0FF;
 }
-.lightfont{
+.lightfont {
 	font-family: roboto-light, Verdana, sans-serif; 
 	font-weight: 600; 
-	color: #F7F0FF
+	color: #F7F0FF;
 }
-.thinfont{
+.thinfont {
 	font-family: roboto-thin, Verdana, sans-serif; 
 	font-weight: 700; 
-	color: #F7F0FF
+	color: #F7F0FF;
 }
