--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,7 @@
 
 /* Configuration of body elements. */
 body {
-	background-color: #5c5470;
+	background-color: #a6b1e1;
 }
 
 ul {
@@ -15,7 +15,7 @@ ul {
 	margin: 0;
 	width: 100%;
 	overflow: hidden;
-	background-color: #7B6780;
+	background-color: #dcd6f7;
 }
 
 ul li {
@@ -29,7 +29,7 @@ ul li a {
 }
 
 ul li a:hover:not(.currentpage) {
-	background-color: #4c3F4F;
+	background-color: #afb8de;
 }
 
 iframe {
@@ -39,22 +39,22 @@ iframe {
 
 /* Class definitions. */
 .currentpage {
-	background-color: #625266;
+	background-color: #424874;
 	cursor: pointer;
 }
 
 .normalfont {
 	font-family: roboto, Verdana, sans-serif; 
 	font-weight: 800; 
-	color: #F7F0FF;
+	color: #1c1e30;
 }
 .lightfont {
 	font-family: roboto-light, Verdana, sans-serif; 
 	font-weight: 600; 
-	color: #F7F0FF;
+	color: #1c1e30;
 }
 .thinfont {
 	font-family: roboto-thin, Verdana, sans-serif; 
 	font-weight: 700; 
-	color: #F7F0FF;
+	color: #1c1e30;
 }
