--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,10 +9,10 @@ body {
 }
 
 ul {
-	display: inline-block;
+	display: block;
 	list-style-type: none;
-	padding: 0;
-	margin: 0;
+	padding: 5px 0px 5px 5px;
+	margin: 20px 0px;
 	width: 100%;
 	overflow: hidden;
 	background-color: #dcd6f7;
@@ -23,8 +23,8 @@ ul li {
 }
 
 ul li a {
-	display: block;
-	padding: 15px;
+	display: inline-block;
+	padding: 15px 20px;
 	text-decoration: none;
 }
 
