--- a/stylesheet.css
+++ b/stylesheet.css
@@ -50,16 +50,19 @@ iframe {
 
 .normalfont {
 	font-family: roboto, Verdana, sans-serif; 
-	font-weight: 800; 
+	font-weight: 800;
+	font-size: 18px;
 	color: #1c1e30;
 }
 .lightfont {
 	font-family: roboto-light, Verdana, sans-serif; 
-	font-weight: 600; 
+	font-weight: 600;
+	font-size: 18px;
 	color: #1c1e30;
 }
 .thinfont {
 	font-family: roboto-thin, Verdana, sans-serif; 
-	font-weight: 700; 
+	font-weight: 700;
+	font-size: 18px;
 	color: #1c1e30;
 }
