--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,8 +11,8 @@ body {
 ul {
 	display: block;
 	list-style-type: none;
-	padding: 5px 0px 5px 5px;
-	margin: 20px 0px;
+	padding: 0.3125em 0em 0.3125em 0.3125em;
+	margin: 1.25em 0em;
 	width: 100%;
 	overflow: hidden;
 	background-color: #dcd6f7;
@@ -24,7 +24,7 @@ ul li {
 
 ul li a {
 	display: inline-block;
-	padding: 15px 20px;
+	padding: 0.9375em 1.25em;
 	text-decoration: none;
 }
 
@@ -33,13 +33,13 @@ ul li a:hover:not(.currentpage) {
 }
 
 ol {
-	padding: 15px;
+	padding: 0.9375em;
 	margin: 0;
 }
 
 iframe {
 	display: inline-block;
-	padding: 5px;
+	padding: 0.3125em;
 }
 
 /* Class definitions. */
