--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,23 +9,26 @@ body {
 }
 
 ul {
-	display: block;
 	list-style-type: none;
-	padding: 0.3125em 0em 0.3125em 0.3125em;
-	margin: 1.25em 0em;
-	width: 100%;
+	padding: 0.3125em;
+	margin: 1.25em;
+	max-width: 100%;
 	overflow: hidden;
 	background-color: #dcd6f7;
 }
 
 ul li {
+	display: inline-block;
 	float: left;
+	margin: 1em;
+	max-width: 100%;
 }
 
 ul li a {
-	display: inline-block;
-	padding: 0.9375em 1.25em;
+	display: inline;
+	padding: 3em;
 	text-decoration: none;
+	max-width: 100%;
 }
 
 ul li a:hover:not(.currentpage) {
