--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,6 +20,7 @@ ul {
 ul li {
 	display: inline-block;
 	float: left;
+	min-width: 33.33%;
 	max-width: 100%;
 }
 
@@ -27,7 +28,6 @@ ul li a {
 	display: block;
 	padding: 1em;
 	text-decoration: none;
-	max-width: 100%;
 }
 
 ul li a:hover:not(.currentpage) {
