--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,6 +10,7 @@ body {
 
 div {
 	padding: 2em;
+	text-align: center;
 	max-width: 100%;
 }
 
@@ -18,6 +19,7 @@ ul {
 	padding: 1em;
 	margin: 3em;
 	max-width: 100%;
+	text-align: center;
 	overflow: hidden;
 	background-color: #dcd6f7;
 }
@@ -68,6 +70,8 @@ iframe {
 	color: #1c1e30;
 }
 
-.bigf { font-size: 36px; }
-.mediumf { font-size: 24px; }
+.biggestf { font-size: 48px; }
+.biggerf { font-size: 36px; }
+.bigf { font-size: 28px; }
+.mediumf { font-size: 18px; }
 .smallf { font-size: 12px; }
