--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,18 +6,19 @@
 /* Configuration of body elements. */
 body {
 	background-color: #a6b1e1;
+	padding: 2vw;
 }
 
 div {
-	padding: 2em;
+	padding: 1vw;
 	text-align: center;
 	max-width: 100%;
 }
 
 ul {
 	list-style-type: none;
-	padding: 1em;
-	margin: 3em;
+	padding: 0vw;
+	margin: 0vw;
 	max-width: 100%;
 	text-align: center;
 	overflow: hidden;
@@ -27,13 +28,13 @@ ul {
 ul li {
 	display: inline-block;
 	float: left;
-	min-width: 33.33%;
+	min-width: 33.33%; /* width of the header buttons */
 	max-width: 100%;
 }
 
 ul li a {
 	display: block;
-	padding: 2em 1em;
+	padding: 1.5em 0em;
 	text-decoration: none;
 }
 
@@ -42,13 +43,13 @@ ul li a:hover:not(.currentpage) {
 }
 
 ol {
-	padding: 1.3em;
+	padding: 1.3vw;
 	margin: 0;
 }
 
 iframe {
 	display: inline-block;
-	padding: 0.3125em;
+	padding: 0.3125vw;
 }
 
 /* Class definitions. */
