--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,6 +10,7 @@ body {
 }
 
 div {
+	position: relative;
 	padding: 1vw;
 	text-align: center;
 	max-width: 100%;
@@ -49,7 +50,6 @@ ol {
 }
 
 iframe {
-	display: inline-block;
 	padding: 0.3125vw;
 }
 
