--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,11 +49,23 @@ ol {
 	margin: 0;
 }
 
-iframe {
-	padding: 0.3125vw;
+/* Class definitions. */
+.video-container {
+	position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
 }
 
-/* Class definitions. */
+.video-container iframe, .video-container object, .video-container embed{
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
+
 .currentpage {
 	background-color: #424874;
 	cursor: pointer;
