--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,17 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Hide scrollbars but keep scrolling functionality */
+html, body {
+    overflow: hidden; /* Hides the scrollbar */
+}
+
+/* To allow scrolling with hidden scrollbar */
+.root {
+    overflow: auto; /* Allows scrolling inside specific elements */
+    padding-right: 15px; /* Optional: Add padding to account for scrollbar width */
+}
